# TextAdventureToolkit

./: .gitignore  README.md  Writeup.docx
ASGE2 Game/: CMakeLists.txt  main.cpp
ASGE2 Game/Builds/data/: story.json
ASGE2 Game/CMake/: itch.io.cmake
ASGE2 Game/Libs/: CMakeLists.txt
ASGE2 Game/Libs/ASGE/: LICENSE  README.md
ASGE2 Game/Libs/ASGE/doc/html/: _colours_8h.html  _debug_printer_8h.html  _file_i_o_8h.html  _font_8h.html  _game_8h.html  _game_time_8h.html  _gamepad_8h.html  _input_8h.html  _input_events_8h.html  _keys_8h.html  _mouse_8h.html  _non_copyable_8h.html  _o_g_l_game_8h.html  _renderer_8h.html  _sprite_8h.html  _texture_8h.html  annotated.html  changelog.html  class_a_s_g_e_1_1_debug_printer.html  class_a_s_g_e_1_1_game.html  class_a_s_g_e_1_1_input.html  class_a_s_g_e_1_1_non_copyable.html  class_a_s_g_e_1_1_o_g_l_game.html  class_a_s_g_e_1_1_renderer.html  class_a_s_g_e_1_1_sprite.html  class_a_s_g_e_1_1_texture2_d.html  class_a_s_g_e_1_1_value.html  dir_0b6ee6e7e9547e675db4add2e5de97da.html  files.html  getting-started.html  index.html  modules.html  namespace_a_s_g_e.html  namespace_a_s_g_e_1_1_c_o_l_o_u_r_s.html  namespace_a_s_g_e_1_1_f_i_l_e_i_o.html  namespace_a_s_g_e_1_1_k_e_y_s.html  namespace_a_s_g_e_1_1_m_o_u_s_e.html  namespaces.html  pages.html  searchdata.js  (+12 more)
ASGE2 Game/Libs/ASGE/include/Engine/: Colours.h  DebugPrinter.h  Doxygen.h  FileIO.h  Font.h  Game.h  GameTime.h  Gamepad.h  Input.h  InputEvents.h  KeyIndex.h  Keys.h  Locator.h  Mouse.h  NonCopyable.h  OGLGame.h  Platform.h  Point2D.h  Renderer.h  Shader.h  Sprite.h  SpriteBounds.h  Texture.h  Value.h
ASGE2 Game/Libs/ASGE/lib/linux/: libGameEngine.so.0.2  libGameEngine.so.0.2.1  libGameEngine.so.0.2.2  libGameEngine.so.0.3  libGameEngine.so.0.3.1  libGameEngined.so.0.2  libGameEngined.so.0.3
ASGE2 Game/Libs/ASGE/lib/osx/: libGameEngine.0.3.1.dylib  libGameEngine.0.3.dylib  libGameEngine.dylib  libGameEngined.0.3.1.dylib  libGameEngined.0.3.dylib  libGameEngined.dylib
ASGE2 Game/Libs/irrKlang-64bit-1.6.0/doc/: doc_cpp.html  doc_dotnet.html  readme.txt
ASGE2 Game/Libs/irrKlang-64bit-1.6.0/doc/cpp/: annotated.html  classes.html  classirrklang_1_1_i_audio_recorder-members.html  classirrklang_1_1_i_audio_recorder.html  classirrklang_1_1_i_audio_stream-members.html  classirrklang_1_1_i_audio_stream.html  classirrklang_1_1_i_audio_stream_loader-members.html  classirrklang_1_1_i_audio_stream_loader.html  classirrklang_1_1_i_captured_audio_data_receiver-members.html  classirrklang_1_1_i_captured_audio_data_receiver.html  classirrklang_1_1_i_file_factory-members.html  classirrklang_1_1_i_file_factory.html  classirrklang_1_1_i_file_reader-members.html  classirrklang_1_1_i_file_reader.html  classirrklang_1_1_i_ref_counted-members.html  classirrklang_1_1_i_ref_counted.html  classirrklang_1_1_i_sound-members.html  classirrklang_1_1_i_sound.html  classirrklang_1_1_i_sound_device_list-members.html  classirrklang_1_1_i_sound_device_list.html  classirrklang_1_1_i_sound_effect_control-members.html  classirrklang_1_1_i_sound_effect_control.html  classirrklang_1_1_i_sound_engine-members.html  classirrklang_1_1_i_sound_engine.html  classirrklang_1_1_i_sound_mixed_output_receiver-members.html  classirrklang_1_1_i_sound_mixed_output_receiver.html  classirrklang_1_1_i_sound_source-members.html  classirrklang_1_1_i_sound_source.html  classirrklang_1_1_i_sound_stop_event_receiver-members.html  classirrklang_1_1_i_sound_stop_event_receiver.html  classirrklang_1_1_i_virtual_ref_counted-members.html  classirrklang_1_1_i_virtual_ref_counted.html  classirrklang_1_1vec3d-members.html  classirrklang_1_1vec3d.html  doxygen.css  files.html  functions.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  (+75 more)
ASGE2 Game/Libs/irrKlang-64bit-1.6.0/doc/cpp/search/: all_61.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_69.html  all_6d.html  all_6e.html  all_70.html  all_73.html  all_75.html  all_76.html  all_78.html  all_79.html  classes_69.html  classes_73.html  classes_76.html  defines_69.html  enums_65.html  enumvalues_65.html  (+22 more)
ASGE2 Game/Libs/irrKlang-64bit-1.6.0/doc/dotnet/: IrrKlang.AudioFormat.BytesPerSecond.html  IrrKlang.AudioFormat.ChannelCount.html  IrrKlang.AudioFormat.Format.html  IrrKlang.AudioFormat.FrameCount.html  IrrKlang.AudioFormat.FrameSize.html  IrrKlang.AudioFormat.SampleDataSize.html  IrrKlang.AudioFormat.SampleRate.html  IrrKlang.AudioFormat.SampleSize.html  IrrKlang.AudioFormat.html  IrrKlang.AudioFormatConstructor.html  IrrKlang.AudioFormatFields.html  IrrKlang.AudioFormatMembers.html  IrrKlang.AudioFormatProperties.html  IrrKlang.EventForwarder.html  IrrKlang.EventForwarderMembers.html  IrrKlang.FileFactoryForwarder.html  IrrKlang.FileFactoryForwarderMembers.html  IrrKlang.IAudioRecorder.AddSoundSourceFromRecordedAudio.html  IrrKlang.IAudioRecorder.AudioFormat.html  IrrKlang.IAudioRecorder.ClearRecordedAudioDataBuffer.html  IrrKlang.IAudioRecorder.Finalize.html  IrrKlang.IAudioRecorder.IsRecording.html  IrrKlang.IAudioRecorder.RecordedAudioData.html  IrrKlang.IAudioRecorder.StartRecordingBufferedAudio_overload_1.html  IrrKlang.IAudioRecorder.StartRecordingBufferedAudio_overload_2.html  IrrKlang.IAudioRecorder.StartRecordingBufferedAudio_overloads.html  IrrKlang.IAudioRecorder.StopRecordingAudio.html  IrrKlang.IAudioRecorder.html  IrrKlang.IAudioRecorderConstructor.html  IrrKlang.IAudioRecorderConstructor1.html  IrrKlang.IAudioRecorderConstructor2.html  IrrKlang.IAudioRecorderConstructor3.html  IrrKlang.IAudioRecorderMembers.html  IrrKlang.IAudioRecorderMethods.html  IrrKlang.IAudioRecorderProperties.html  IrrKlang.IFileFactory.html  IrrKlang.IFileFactory.openFile.html  IrrKlang.IFileFactoryMembers.html  IrrKlang.IFileFactoryMethods.html  IrrKlang.ISound.Dispose.html  (+218 more)
ASGE2 Game/Resources/: story.json
ASGE2 Game/Resources_OLD/: story_dev.json
ASGE2 Game/Source/: Animations.cpp  Animations.h  Game.cpp  Game.h  GameConstants.h  GameLogic.cpp  GameLogic.h  GameProgress.cpp  GameScreenText.h  GameStates.h  SpriteComponent.cpp  SpriteComponent.h
(+417 files in other folders)
